--- a/static/style/master.css
+++ b/static/style/master.css
@@ -4533,6 +4533,20 @@ h6 {
 .bullet-icon {
   margin: 3rem 0 1rem; }
 
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%; }
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
 /* ----- Esplanade --- */
 #esplanade_project_overview {
   background-image: url("../img/esplanade_bg_sm.png");
@@ -4547,3 +4561,10 @@ h6 {
   @media (min-width: 576px) {
     #zalora_project_overview {
       background-image: url("../img/zalora_bg.png"); } }
+
+#autodesk_project_overview {
+  background-image: url("../img/autodesk_bg_sm");
+  background-size: cover; }
+  @media (min-width: 576px) {
+    #autodesk_project_overview {
+      background-image: url("../img/autodesk_bg.png"); } }
