--- a/static/style/scss/style.scss
+++ b/static/style/scss/style.scss
@@ -135,10 +135,9 @@
 .bullet-icon {
 	margin: 3rem 0 1rem;
 }
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
 /* ----- Esplanade --- */
-
-// TODO: add break point 
 
 #esplanade_project_overview {
 	background-image: url('../img/esplanade_bg_sm.png');
@@ -153,5 +152,13 @@
 	background-size: cover;
 	@media (min-width: 576px) {
 		background-image: url('../img/zalora_bg.png');
+	}
+}
+
+#autodesk_project_overview {
+	background-image: url('../img/autodesk_bg_sm');
+	background-size: cover;
+	@media (min-width: 576px) {
+		background-image: url('../img/autodesk_bg.png');
 	}
 }
