--- a/static/style/master.css
+++ b/static/style/master.css
@@ -862,7 +862,7 @@ h6 {
     background: #97e5ef; }
 
 .section-title p {
-  margin: 10px 0 0;
+  margin: 1rem 0 0;
   font-size: 18px; }
   @media (max-width: 991px) {
     .section-title p {
